k8s/ingress-nginx/app/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app    
  template:
    metadata:
      labels:
        app: my-app   
    spec:
      containers:
        - name: my-app
          image: acr20250715tc.azurecr.io/timer-app:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: acr-secret
